# eu-customs-ontology

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_results.txt
.github/workflows/: build-release.yml  docs.yml
.playwright-mcp/: page-2026-06-08T14-03-06-280Z.yml  page-2026-06-08T14-10-40-811Z.yml  page-2026-06-08T14-12-30-884Z.yml  page-2026-06-08T14-12-38-783Z.yml  page-2026-06-08T14-19-31-974Z.yml  page-2026-06-08T14-22-43-042Z.yml  page-2026-06-08T14-22-46-786Z.yml  page-2026-06-08T14-23-17-684Z.yml
data/axiom_candidates/: ch22.jsonl  ch23.jsonl
data/ontology/: ch22.trig  ch22.ttl  eucn-ch22-2026-06-05.trig  eucn-ch22-2026-06-05.ttl  eucn-ch22-2026-06-08.trig  eucn-ch22-2026-06-08.ttl  eucn-ch22-beverages-2026-06-08-flat.ttl  eucn-ch22-beverages-2026-06-08.trig  eucn-ch22-beverages-2026-06-08.ttl  eucn-ch22-beverages-2026-06-09-flat.ttl  eucn-ch22-beverages-2026-06-09.trig  eucn-ch22-beverages-2026-06-09.ttl  eucn-ch22-beverages-latest.ttl  eucn-ch22-latest.ttl  eucn-ch23-residues-feed-2026-06-08-flat.ttl  eucn-ch23-residues-feed-2026-06-08.trig  eucn-ch23-residues-feed-2026-06-08.ttl  eucn-ch23-residues-feed-latest.ttl  eucn-core-2026-06-08.ttl  eucn-core-2026-06-09.ttl  eucn-core-2026-06-10.ttl  eucn-core-latest.ttl
data/reports/: ch22_coverage.json
demo/: ch22-beverages-demo.ttl
docs/: ontology-patterns.md
docs/brainstorms/: 2026-06-08-004-feat-bfo-process-class-architecture-requirements.md  eu-customs-ontology-requirements.md
scripts/: migrate_axioms_to_candidates.py  retire_chapter.py
src/: pipeline.py
src/agent/: harmonizer.py  (+10 more)
(+208 files in other folders)
